Fix Swagger doc for openai suggest route
